fix: disable telescope

--- a/.env.example
+++ b/.env.example
@@ -155,3 +155,5 @@ TWITTER_ACCESS_TOKEN_SECRET=
 TWITTER_API_VERSION=2
 
 DISCORD_INVITE_API_URL=https://discord.com/api/v9/invites/MJyWKkCJ5k?with_counts=true&with_expiration=true
+
+TELESCOPE_ENABLED=false
