--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,24 @@
         "php": "^8.2",
         "atymic/twitter": "^3.2",
         "cyrildewit/eloquent-viewable": "dev-master",
-        "filament/filament": "^3.0-stable",
-        "guzzlehttp/guzzle": "^7.7",
+        "filament/filament": "^3.0",
+        "guzzlehttp/guzzle": "^7.8",
         "halaxa/json-machine": "^1.1",
         "inertiajs/inertia-laravel": "^0.6",
         "kornrunner/keccak": "^1.1",
-        "laravel/framework": "^10.16",
+        "laravel/framework": "^10.21",
         "laravel/horizon": "^5.19",
         "laravel/pennant": "^1.4",
         "laravel/sanctum": "^3.2",
         "laravel/slack-notification-channel": "^2.0",
-        "laravel/telescope": "^4.15",
+        "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
         "monolog/monolog": "^3.4",
-        "sentry/sentry-laravel": "^3.6",
+        "sentry/sentry-laravel": "^3.7",
         "simplito/elliptic-php": "^1.0",
-        "spatie/laravel-data": "^3.7",
-        "spatie/laravel-medialibrary": "^10.11",
-        "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-data": "^3.8",
+        "spatie/laravel-medialibrary": "^10.12",
+        "spatie/laravel-permission": "^5.11",
         "spatie/laravel-schemaless-attributes": "^2.4",
         "spatie/laravel-sluggable": "^3.5",
         "spatie/laravel-typescript-transformer": "^2.3",
@@ -36,17 +36,17 @@
         "tpetry/laravel-postgresql-enhanced": "^0.31"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.8",
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.23",
         "graham-campbell/analyzer": "^4.0",
-        "laravel/breeze": "^1.21",
-        "laravel/pint": "^1.10",
-        "laravel/sail": "^1.23",
+        "laravel/breeze": "^1.23",
+        "laravel/pint": "^1.12",
+        "laravel/sail": "^1.24",
         "mockery/mockery": "^1.6",
         "nunomaduro/larastan": "^2.6",
-        "pestphp/pest": "^2.9",
+        "pestphp/pest": "^2.17",
         "rector/rector": "0.17.6",
-        "spatie/laravel-ignition": "^2.2"
+        "spatie/laravel-ignition": "^2.3"
     },
     "autoload": {
         "psr-4": {
