feat: filament breezy

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.8",
         "halaxa/json-machine": "^1.1",
         "inertiajs/inertia-laravel": "^0.6",
+        "jeffgreco13/filament-breezy": "^2.1",
         "kornrunner/keccak": "^1.1",
         "laravel/framework": "^10.21",
         "laravel/horizon": "^5.19",
