--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/larastan": "^2.6",
         "pestphp/pest": "^2.17",
-        "rector/rector": "0.17.6",
+        "rector/rector": "^0.18.2",
         "spatie/laravel-ignition": "^2.3"
     },
     "autoload": {
@@ -60,7 +60,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Utils\\Rector\\": "utils/rector"
         }
     },
     "scripts": {
