--- a/.env.example
+++ b/.env.example
@@ -158,4 +158,4 @@ DISCORD_INVITE_API_URL=https://discord.com/api/v9/invites/MJyWKkCJ5k?with_counts
 
 TELESCOPE_ENABLED=false
 
-2FA_ENABLED=false
+2FA_ENABLED=true
