feat: add article model

--- a/.env.example
+++ b/.env.example
@@ -141,6 +141,7 @@ SEEDER_NFTS_CHUNK_SIZE=50
 PORTFOLIO_ENABLED=true
 GALLERIES_ENABLED=true
 COLLECTIONS_ENABLED=true
+ARTICLES_ENABLED=true
 
 TESTNET_ENABLED=false
 
