--- a/.env.example
+++ b/.env.example
@@ -123,6 +123,9 @@ FOOTPRINT_MAX_REQUESTS_SECONDS=1
 SLACK_REPORTS_WEBHOOK_URL=
 SLACK_REPORTS_ENABLED=false
 
+SLACK_GALLERY_LOGS_WEBHOOK_URL=
+SLACK_GALLERY_LOGS_ENABLED=false
+
 VITE_TRANSACTION_HISTORY_POLLING_FREQUENCY=2000
 
 # Max supply cap for FetchCollectionNft job
