--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
         "axios-cancel": "^0.2.2",
         "body-scroll-lock": "4.0.0-beta.0",
         "browser-fs-access": "^0.34.1",
+        "canvas-confetti": "^1.6.1",
         "chart.js": "^4.3.2",
         "classnames": "^2.3.2",
         "ethers": "^5.7.2",
