add opensea api keys

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,9 @@ COINGECKO_ENDPOINT=https://api.coingecko.com/api/v3/
 # Optional (only required if you want to use the PRO CoinGecko API)
 COINGECKO_API_KEY=
 
+# For a free API key just register an account at https://www.footprint.network/
+OPENSEA_API_KEY=
+
 HORIZON_USER_IDS=
 
 LOCAL_TESTING_ADDRESS=
