--- a/.env.example
+++ b/.env.example
@@ -25,9 +25,6 @@ ALCHEMY_API_KEY_POLYGON_TESTNET=
 ALCHEMY_API_KEY_ETHEREUM_MAINNET=
 ALCHEMY_API_KEY_ETHEREUM_TESTNET=
 
-# For a free API key just register an account at https://www.footprint.network/
-FOOTPRINT_API_KEY=
-
 VITE_APP_NETWORK_FEES_API_ENDPOINT_POLYGON_MAINNET=https://api.polygonscan.com/api?module=gastracker&action=gasoracle&apikey=
 VITE_APP_NETWORK_FEES_API_ENDPOINT_ETHEREUM_MAINNET=https://api.etherscan.io/api?module=gastracker&action=gasoracle&apikey=
 
@@ -48,8 +45,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN=.dashbrd.com # Change to your own setup
-SANCTUM_STATEFUL_DOMAINS=beta.dashbrd.com # Change to your own setup
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -96,6 +91,9 @@ COINGECKO_ENDPOINT=https://api.coingecko.com/api/v3/
 # Optional (only required if you want to use the PRO CoinGecko API)
 COINGECKO_API_KEY=
 
+# For a free API key see https://docs.opensea.io/reference/api-keys
+OPENSEA_API_KEY=
+
 HORIZON_USER_IDS=
 
 LOCAL_TESTING_ADDRESS=
@@ -116,9 +114,6 @@ MORALIS_MAX_REQUESTS=25
 MORALIS_MAX_REQUESTS_SECONDS=60
 ALCHEMY_MAX_REQUESTS=25
 ALCHEMY_MAX_REQUESTS_SECONDS=60
-# @see https://www.footprint.network/pricing?type=data-api
-FOOTPRINT_MAX_REQUESTS=30
-FOOTPRINT_MAX_REQUESTS_SECONDS=1
 
 SLACK_REPORTS_WEBHOOK_URL=
 SLACK_REPORTS_ENABLED=false
