--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         "guzzlehttp/guzzle": "^7.8",
         "halaxa/json-machine": "^1.1",
         "inertiajs/inertia-laravel": "^0.6",
-        "intervention/image": "^2.7",
         "jeffgreco13/filament-breezy": "^2.1",
         "kornrunner/keccak": "^1.1",
         "laravel/framework": "^10.25",
@@ -28,7 +27,7 @@
         "monolog/monolog": "^3.4",
         "sentry/sentry-laravel": "^3.8",
         "simplito/elliptic-php": "^1.0",
-        "spatie/browsershot": "^3.58",
+        "spatie/browsershot": "*",
         "spatie/laravel-data": "^3.9",
         "spatie/laravel-medialibrary": "^10.13",
         "spatie/laravel-permission": "^5.11",
