--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
         "@metamask/providers": "^10.2.1",
         "@popperjs/core": "^2.11.8",
         "@storybook/addon-docs": "^7.4.4",
+        "@tailwindcss/typography": "^0.5.10",
         "@tanstack/react-query": "^4.35.3",
         "@testing-library/jest-dom": "^6.1.3",
         "@types/string-hash": "^1.1.1",
