add lock for the screenshot

--- a/.env.example
+++ b/.env.example
@@ -160,3 +160,4 @@ TELESCOPE_ENABLED=false
 
 BROWSERSHOT_NODE_BINARY="/usr/local/bin/node"
 BROWSERSHOT_NPM_BINARY="/usr/local/bin/npm"
+BROWSERSHOT_TIMEOUT=60
