chore: run ui on json and yaml changes

--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -6,6 +6,8 @@ on:
       - "**.css"
       - "**.js"
       - "**.ts"
+      - "**.yaml"
+      - "**.json"
       - "**.php"
       - "**.svg"
       - "**.tsx"
