--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
         "file-saver": "^2.0.5",
         "i18next": "^22.5.1",
         "lru-cache": "^10.0.1",
+        "puppeteer": "^21.4.0",
         "react-chartjs-2": "^5.2.0",
         "react-i18next": "^12.3.1",
         "react-in-viewport": "1.0.0-alpha.30",
