feat: gallery dynamic meta image (#188)

--- a/.env.example
+++ b/.env.example
@@ -157,3 +157,7 @@ DISCORD_INVITE_API_URL=https://discord.com/api/v9/invites/MJyWKkCJ5k?with_counts
 TELESCOPE_ENABLED=false
 
 2FA_ENABLED=true
+
+BROWSERSHOT_NODE_BINARY="/usr/local/bin/node"
+BROWSERSHOT_NPM_BINARY="/usr/local/bin/npm"
+BROWSERSHOT_TIMEOUT=60
