--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "atymic/twitter": "^3.2",
+        "aws/aws-sdk-php": "^3.283",
         "cyrildewit/eloquent-viewable": "dev-master",
         "filament/filament": "^3.0",
         "filament/spatie-laravel-media-library-plugin": "^3.0",
@@ -29,6 +30,7 @@
         "sentry/sentry-laravel": "^3.8",
         "simplito/elliptic-php": "^1.0",
         "spatie/laravel-data": "^3.9",
+        "spatie/laravel-markdown": "^2.4",
         "spatie/laravel-medialibrary": "^10.13",
         "spatie/laravel-permission": "^5.11",
         "spatie/laravel-schemaless-attributes": "^2.4",
