--- a/package.json
+++ b/package.json
@@ -118,7 +118,6 @@
         "@ardenthq/sdk-helpers": "^1.2.7",
         "@ardenthq/sdk-intl": "^1.2.7",
         "@metamask/providers": "^10.2.1",
-        "@microflash/remark-figure-caption": "^2.0.2",
         "@popperjs/core": "^2.11.8",
         "@storybook/addon-docs": "^7.5.1",
         "@tanstack/react-query": "^4.36.1",
@@ -145,9 +144,14 @@
         "react-sortablejs": "^6.1.4",
         "react-table": "^7.8.0",
         "react-use-cancel-token": "^1.0.3",
+        "rehype-raw": "^7.0.0",
+        "rehype-stringify": "^10.0.0",
+        "remark-gfm": "^4.0.0",
+        "remark-rehype": "^11.0.0",
         "sortablejs": "^1.15.0",
         "string-hash": "^1.1.3",
         "tailwind-merge": "^1.14.0",
-        "tippy.js": "^6.3.7"
+        "tippy.js": "^6.3.7",
+        "unified": "^11.0.3"
     }
 }
