--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
         "@tanstack/react-query": "^4.36.1",
         "@testing-library/jest-dom": "^6.1.4",
         "@types/string-hash": "^1.1.2",
+        "@types/unist": "^3.0.1",
         "assert": "^2.1.0",
         "body-scroll-lock": "4.0.0-beta.0",
         "browser-fs-access": "^0.35.0",
@@ -146,7 +147,7 @@
         "react-use-cancel-token": "^1.0.3",
         "rehype-raw": "^7.0.0",
         "rehype-stringify": "^10.0.0",
-        "remark-gfm": "^4.0.0",
+        "remark": "^15.0.1",
         "remark-rehype": "^11.0.0",
         "sortablejs": "^1.15.0",
         "string-hash": "^1.1.3",
