--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
         "react-sortablejs": "^6.1.4",
         "react-table": "^7.8.0",
         "react-use-cancel-token": "^1.0.3",
+        "rehype-external-links": "^3.0.0",
         "rehype-raw": "^7.0.0",
         "rehype-stringify": "^10.0.0",
         "remark-rehype": "^11.0.0",
