--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
         "laravel/slack-notification-channel": "^2.0",
         "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
-        "league/commonmark": "^2.4",
         "monolog/monolog": "^3.4",
         "sentry/sentry-laravel": "^3.8",
         "simplito/elliptic-php": "^1.0",
         "spatie/browsershot": "^3.59",
         "spatie/laravel-data": "^3.9",
+        "spatie/laravel-markdown": "^2.4",
         "spatie/laravel-medialibrary": "^10.13",
         "spatie/laravel-permission": "^5.11",
         "spatie/laravel-schemaless-attributes": "^2.4",
