--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
         "string-hash": "^1.1.3",
         "tailwind-merge": "^1.14.0",
         "tippy.js": "^6.3.7",
-        "unified": "^11.0.3"
+        "unified": "^11.0.3",
+        "wavesurfer.js": "^7.4.2"
     }
 }
