--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
         "rehype-external-links": "^3.0.0",
         "rehype-raw": "^7.0.0",
         "rehype-stringify": "^10.0.0",
+        "remark-gfm": "^4.0.0",
         "remark-rehype": "^11.0.0",
         "sortablejs": "^1.15.0",
         "string-hash": "^1.1.3",
