--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "@storybook/types": "^7.5.3",
         "@tailwindcss/forms": "^0.5.7",
         "@testing-library/dom": "^9.3.3",
-        "@testing-library/react": "^14.1.0",
+        "@testing-library/react": "^14.1.2",
         "@testing-library/react-hooks": "^8.0.1",
         "@testing-library/user-event": "^14.5.1",
         "@tippyjs/react": "^4.2.6",
@@ -49,27 +49,27 @@
         "@types/file-saver": "^2.0.7",
         "@types/lodash": "^4.14.201",
         "@types/lru-cache": "^7.10.10",
-        "@types/node": "^18.18.9",
+        "@types/node": "^18.18.10",
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
         "@types/react-table": "^7.7.18",
         "@types/sortablejs": "^1.15.5",
         "@types/testing-library__jest-dom": "^6.0.0",
         "@types/ziggy-js": "^1.3.3",
-        "@typescript-eslint/eslint-plugin": "^6.10.0",
-        "@typescript-eslint/parser": "^6.10.0",
+        "@typescript-eslint/eslint-plugin": "^6.11.0",
+        "@typescript-eslint/parser": "^6.11.0",
         "@vavt/vite-plugin-import-markdown": "^1.0.0",
-        "@vitejs/plugin-react": "^4.1.1",
+        "@vitejs/plugin-react": "^4.2.0",
         "@vitest/coverage-istanbul": "^0.34.6",
         "autoprefixer": "^10.4.16",
-        "axios": "^1.6.1",
+        "axios": "^1.6.2",
         "babel-loader": "^8.3.0",
         "bignumber.js": "^9.1.2",
         "chart.js": "^4.4.0",
         "chartjs-adapter-date-fns": "^3.0.0",
         "chromatic": "^6.24.1",
         "date-fns": "^2.30.0",
-        "eslint": "^8.53.0",
+        "eslint": "^8.54.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-config-standard-with-typescript": "^39.1.1",
         "eslint-plugin-import": "^2.29.0",
@@ -93,7 +93,7 @@
         "msw": "^1.3.2",
         "php-parser": "^3.1.5",
         "postcss": "^8.4.31",
-        "prettier": "^3.0.3",
+        "prettier": "^3.1.0",
         "prettier-plugin-tailwindcss": "^0.5.7",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
@@ -106,7 +106,7 @@
         "storybook-react-i18next": "^2.0.9",
         "swiper": "^9.4.1",
         "tailwindcss": "^3.3.5",
-        "ts-loader": "^9.5.0",
+        "ts-loader": "^9.5.1",
         "typescript": "^5.2.2",
         "vanilla-cookieconsent": "^2.9.2",
         "vite": "^4.5.0",
@@ -134,13 +134,13 @@
         "file-saver": "^2.0.5",
         "i18next": "^22.5.1",
         "lru-cache": "^10.0.2",
-        "puppeteer": "^21.5.1",
+        "puppeteer": "^21.5.2",
         "react-chartjs-2": "^5.2.0",
         "react-i18next": "^12.3.1",
         "react-in-viewport": "1.0.0-alpha.30",
         "react-indexed-db-hook": "^1.0.14",
         "react-loading-skeleton": "^3.3.1",
-        "react-markdown": "^9.0.0",
+        "react-markdown": "^9.0.1",
         "react-popper": "^2.3.0",
         "react-resize-detector": "^8.1.0",
         "react-sortablejs": "^6.1.4",
@@ -156,6 +156,7 @@
         "tailwind-merge": "^1.14.0",
         "tippy.js": "^6.3.7",
         "unified": "^11.0.4",
+        "unist-util-visit": "^5.0.0",
         "wavesurfer.js": "^7.4.5"
     }
 }
